gitops/components/promxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acm-observability
  labels:
    app.kubernetes.io/part-of: banking-demo
